# querymind

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_tenant_not_null.py  0003_account_and_prefs.py  0004_user_profile_fields.py  0005_history_answer.py
backend/app/: main.py
backend/app/agents/: dependencies.py  graph.py  parsers.py  state.py
backend/app/api/: auth_deps.py  dependencies.py  middleware.py  rate_limit.py  router.py
backend/app/config/: settings.py
backend/app/database/: engine.py  session.py  user_db.py
backend/app/drivers/: __init__.py  base.py  postgres.py
backend/app/executors/: sql_executor.py
backend/app/jobs/: __init__.py  email.py  fk_weights.py  index_schema.py  worker.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
backend/app/memory/: conversation.py
backend/app/ml/: __init__.py  embedder.py
backend/app/models/: __init__.py  _columns.py  audit_log.py  connection.py  favorite.py  feedback.py  history.py  llm_key.py  schema_index.py  session.py  user.py  workspace.py
backend/app/prompts/: builder.py
backend/app/schemas/: auth.py  connection.py  favorites.py  feedback.py  history.py  llm_key.py  query.py  stats.py
backend/app/security/: __init__.py  crypto.py  passwords.py  sessions.py
backend/app/services/: audit_service.py  connection_service.py  email_service.py  examples_service.py  export_service.py  favorites_service.py  feedback_service.py  history_service.py  llm_key_service.py  retrieval_service.py  schema_index_service.py  stats_service.py  visualization_service.py
backend/app/utils/: logging.py  tracing.py
backend/app/validators/: base.py  complexity.py  explain.py  pipeline.py  safety.py  schema_check.py  syntax.py
backend/docker/postgres/: 05-create-demo-db.sql  10-demo-seed.sql
backend/tests/: conftest.py
backend/tests/fixtures/: sample_queries.py  sample_schema.py  stub_embedder.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_connections_flow.py  test_executor.py  test_indexing_retrieval.py  test_query_flow.py
backend/tests/unit/: test_complexity_validator.py  test_crypto.py  test_prompt_builder.py  test_safety_validator.py  test_schema_signature.py  test_schema_validator.py  test_syntax_validator.py
frontend/: .dockerignore  (+7 more)
(+99 files in other folders)
