[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querymind"
version = "1.0.0"
description = "Production-grade Text-to-SQL agent with LangGraph self-correction, multi-LLM support, live pipeline streaming, and instant result visualization."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",  # modern unified SDK; per-client api_key (BYOK-friendly)
    "sqlglot>=25.0",
    "redis>=5.0",  # redis-py 5.x bundles asyncio (no extra); arq pins this line
    "jinja2>=3.1",
    "structlog>=24.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "sse-starlette>=2.1",
    "python-ulid>=2.0",
    # --- Phase 1 SaaS additions ---
    "pgvector>=0.3",                # SQLAlchemy Vector type + pgvector helpers
    "sentence-transformers>=3.0",   # BAAI/bge-small-en-v1.5 embeddings (CPU)
    "argon2-cffi>=23.1",            # password hashing + KDF for encryption key
    "cryptography>=43.0",           # AES-GCM credential encryption
    "arq>=0.26",                    # Redis-backed async background jobs
    "resend>=2.0",                  # transactional email (password reset)
    "slowapi>=0.1.9",               # rate limiting on /auth/*
    "tiktoken>=0.8",                # token budgeting for OpenAI prompts
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres,redis]>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis>=4.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests that require a live Postgres + Redis",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
